--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -59,9 +59,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/c5f668949459c816c626c418f27952513c881949/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/c5f668949459c816c626c418f27952513c881949/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/c5f668949459c816c626c418f27952513c881949/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -75,9 +75,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/c5f668949459c816c626c418f27952513c881949/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/c5f668949459c816c626c418f27952513c881949">banyekalaok/cee498report@c5f6689</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/d4759e2865d8d2cad63bf58de53105e06aebc3ba">banyekalaok/cee498report@d4759e2</a>
 on December 7, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -459,7 +459,7 @@ The following section summarizes the EDA results that are relevant to the model 
 <h3 id="handing-missing-data">Handing Missing Data</h3>
 <p>Data in the real world always have few missing values. This phenomena may be due to many reasons. There are many methods to handing missing values such as ignore the data row with missing value, replacing the missing value with mean or median value. <strong>Table x</strong> shows the top 8 percentage of missing value for each feature. 1.0 means all the values are missing. 0.0 means none of the data is missing. Here, the missing value of ‘Trip’ are filled with the mean of all the existing ‘Trip’ values. From the table we can know the eighth large of the percentage is already 0, which proves that there is no missing data for other features not appearing in the table.</p>
 <p align="center">
-<img src="missingvalue.png">
+<img src="images/missingvalue.png">
 </p>
 <div data-align="center">
 <p><strong>Percentage of Missing Value</strong></p>
@@ -470,7 +470,7 @@ The following section summarizes the EDA results that are relevant to the model 
 <h4 id="standardization-z-score-normalization">Standardization (Z-score Normalization)</h4>
 <p>In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.</p>
 <p align="center">
-<img src="z-score.png">
+<img src="images/z-score.png">
 </p>
 <div data-align="center">
 <p><strong>Z-score Normalization</strong></p>
