--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -59,9 +59,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/d286301e94a1ff889b87651aceb2ba4066625c25/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d286301e94a1ff889b87651aceb2ba4066625c25/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/d286301e94a1ff889b87651aceb2ba4066625c25/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -75,9 +75,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/d4759e2865d8d2cad63bf58de53105e06aebc3ba/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/d286301e94a1ff889b87651aceb2ba4066625c25/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/d4759e2865d8d2cad63bf58de53105e06aebc3ba">banyekalaok/cee498report@d4759e2</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/d286301e94a1ff889b87651aceb2ba4066625c25">banyekalaok/cee498report@d286301</a>
 on December 7, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -120,7 +120,7 @@ Department of Civil Engineering, University of Illinois, Champaign-Urbana
 </small></p></li>
 </ul>
 <h1 id="chapter-1.-introduction">Chapter 1. Introduction</h1>
-<p>As part of the course project for the class, project group 7 acquired bus ridership per trip weekday data (from here on referred to as <strong>bus data</strong>) for the month of August from the Champaign-Urbana MTD bus organization (CUMTD). To supplement the bus data, CUMTD provided a manual that explains the process and methodology used to track, monitor and acquire the bus data. Figure <a href="#fig:wide-image">3</a> gives an overview of the CUMTD area.</p>
+<p>As part of the course project for the class, project group 7 acquired bus ridership per trip weekday data (from here on referred to as <strong>bus data</strong>) for the month of August from the Champaign-Urbana MTD bus organization (CUMTD). To supplement the bus data, CUMTD provided a manual that explains the process and methodology used to track, monitor and acquire the bus data. Figure ?? gives an overview of the CUMTD area.</p>
 <img src="images/Figure1.png" title="fig:" alt="CUMTD Route Map" />
 <div data-align="center">
 <p><strong>CUMTD Route Map</strong></p>
@@ -496,14 +496,14 @@ The following section summarizes the EDA results that are relevant to the model 
 <h2 id="establish-a-baseline-model">4.1 Establish a Baseline Model</h2>
 <p>Before building a complex model a baseline model was created that simply returns the load average using a fairly straight-forward support vector regression (SVR) model. SVR models are similar to linear regression models except that they minimize the model’s coefficients as opposed to the sum of the squared errors. In addition, SVR provides the flexibility to define an acceptable error level. The model then finds the best fit line to the data points. The figure below illustrates an SVR model.</p>
 <p align="center">
-<img src="SVR illustration.png">
+<img src="images/SVR illustration.png">
 </p>
 <div data-align="center">
 <p><strong>Illustration of support vector regression model</strong></p>
 </div>
 <p>The SVR developed in this project resulted in an accuracy of 47 percent and a root mean squared error of 2.44 and is shown in the figure below.</p>
 <p align="center">
-<img src="SVR Results.png">
+<img src="images/SVR Results.png">
 </p>
 <div data-align="center">
 <p><strong>Support vector regression model results</strong></p>
@@ -514,29 +514,31 @@ The following section summarizes the EDA results that are relevant to the model 
 <h3 id="neural-network-model">Neural Network Model</h3>
 <p>The neural network model has been taken in our team. As a subfield of machine learning, neural network model would input data, and then train themselves to recognize patterns found in data, finally output a set of similar data. Therefore, choosing neural network would process the data like human brain. In our project, it works very well and precisely, and predicts a correspondingly positive relationship between predictions and targets, shown in the <strong>Figure #</strong>. The targets are validation value, and the perditions are predicted value. As the result shows, predictions and targets are very consistent. The detail coding process would show as follows.</p>
 <p align="center">
-<img src="Neural_target.png">
+<img src="images/Neural_target.png">
 </p>
 <div data-align="center">
 <p><strong>Comparison between predictions and targets</strong></p>
 </div>
 <p>A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in <strong>Figure #</strong>. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix.</p>
 <p align="center">
-<img src="Neural_network.png">
+<img src="images/Neural_network.png">
 </p>
 <div data-align="center">
 <p><strong>Neural Network</strong></p>
 </div>
 <p>When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in <strong>Figure #</strong>. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain.</p>
-<div id="fig:wide-image" class="fignos">
-<figure>
-<img src="images/Weight_correction.png" alt="" /><figcaption><span>Figure 1:</span> <strong>Weight correction.</strong></figcaption>
-</figure>
+<p align="center">
+<img src="images/Weight_correction.png">
+</p>
+<div data-align="center">
+<p><strong>Weight correction</strong></p>
 </div>
 <p>In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in <strong>Figure #</strong>.</p>
-<div id="fig:wide-image" class="fignos">
-<figure>
-<img src="images/Plot_in_overfitting.png" alt="" /><figcaption><span>Figure 2:</span> <strong>Plot in overfitting,optimum, and underfitting.</strong></figcaption>
-</figure>
+<p align="center">
+<img src="images/Plot_in_overfitting.png">
+</p>
+<div data-align="center">
+<p><strong>Plot in overfitting,optimum, and underfitting</strong></p>
 </div>
 <p>To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model.</p>
 <p>After the optimization as stochastic gradient descent (SGD), take learning rate as 0.1, the RMSE is 0.268, and the R2 score is 0.965.</p>
@@ -547,10 +549,11 @@ The following section summarizes the EDA results that are relevant to the model 
 <li><p>Boosting models try predictors sequentially, and the subsequent model attempts to fix the errors of its predecessor.</p></li>
 <li><p>Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error.</p></li>
 </ul>
-<div id="fig:wide-image" class="fignos">
-<figure>
-<img src="images/GradientBoosting.png" alt="" /><figcaption><span>Figure 3:</span> <strong>Figure x. Gradient Boosting Algorithm</strong></figcaption>
-</figure>
+<p align="center">
+<img src="images/GradientBoosting.png">
+</p>
+<div data-align="center">
+<p><strong>Figure x. Gradient Boosting Algorithm</strong></p>
 </div>
 <p>The Hyperparameters used in the model are shown as follow. The reason why each parameter has more than one number is that we also use the <strong>grid search</strong> method.
 * max_depth: [3, 10]
@@ -565,10 +568,11 @@ The following section summarizes the EDA results that are relevant to the model 
 <li><p>If a point falls below this line, then for this input we can know prediction &lt; target.</p></li>
 <li><p>The farther the point is from the line, the less accurate the prediction.</p></li>
 </ul>
-<div id="fig:square-image" class="fignos">
-<figure>
-<img src="images/T_P.png" alt="" /><figcaption><span>Figure 4:</span> <strong>Figure x. Predictions VS Targets</strong></figcaption>
-</figure>
+<p align="center">
+<img src="images/T_P.png">
+</p>
+<div data-align="center">
+<p><strong>Figure x. Predictions VS Targets</strong></p>
 </div>
 <h1 id="chapter-5.-conclusions">Chapter 5. Conclusions</h1>
 <p>As was shown in chapter 4 the most predictive model was able to predict the load average with 0.98 accuracy. Some factors need to be taken into consdieration about this process:</p>
